syntax="proto3";

package auth;

option go_package = "../../apigateway/proto/authpb";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc SignUp(SignUpRequest) returns (SignUpResponse){}
}

message SignUpRequest {
    string class=1;
    string firstname=2;
    string lastname=3;
    string password=4;
}

message SignUpResponse {
    string id=1;
    string role=2;
    string class_id=3;
}


message LoginRequest {
    string firstname = 1;
    string lastname = 2;
    string password = 3;
}

message LoginResponse {
    bool exist=1;
    string id=2;
    string role=3;
}